--- a/style.css
+++ b/style.css
@@ -1,13 +1,26 @@
 body {
-    font-family: monaco;
+    font-family: helvetica;
     font-size: 18px;
     line-height: 1.4;
-    background-color: aliceblue;
+    background-color: #161719;
+    color:#cccccc;
+    margin: 1em;
+}
+
+h2 {
+    text-align: center;
+    margin: 0;
+}
+
+a {
+    color:#cccccc;
+    padding-left: 2em;
 }
 
 .container {
     width: 560px;
-    margin:0 auto;
-    border-left: 2px dotted green;
-    padding:0 1em;
+    margin:1em auto;
+    border-left: 2px solid #cccccc;
+    border-bottom: 2px solid #cccccc;
+    padding: 1em;
 }
